# java-native-miscellaneous

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  README.md
include/g6/util/: ciphertext.hpp  process.hpp  symmetric_homomorphic_decryptor.hpp  symmetric_homomorphic_encryptor.hpp
src/: CMakeLists.txt  GXJavaUtilConfig.cmake.in  ciphertext.cpp  com_glasssix_Process.cpp  entry.cpp  entry.hpp  homomorphic_encryption.cpp  homomorphic_encryption.hpp  process.cpp  process.hpp  symmetric_homomorphic_decryptor.cpp  symmetric_homomorphic_encryptor.cpp
src/java/com/glasssix/: IStdoutCallback.java  Process.java  Program.java
src/jni/: CMakeLists.txt  cache_key.hpp  global_ref.cpp  global_ref.hpp  local_ref.cpp  local_ref.hpp  reflector.cpp  reflector.hpp  util.cpp  util.hpp
test/: CMakeLists.txt  main.cpp
